# serializer version: 1
# name: test_lock[amax_3000][lock.main_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.main_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_door_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_lock[amax_3000][lock.main_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Door',
      'supported_features': <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.main_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'locked',
  })
# ---
# name: test_lock[b5512][lock.main_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.main_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_door_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_lock[b5512][lock.main_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Door',
      'supported_features': <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.main_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'locked',
  })
# ---
# name: test_lock[solution_3000][lock.main_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.main_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567890_door_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_lock[solution_3000][lock.main_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Door',
      'supported_features': <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.main_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'locked',
  })
# ---
